# test-chatgpt

./: .gitignore  README.md  pyproject.toml  requirements.txt  voice_assistant.py
.github/workflows/: ci.yml
docs/: acknowledgements.md  api_reference.md  changelog.md  extra.md  faq.md  usage.md
examples/: README.md  example_usage.sh
pydice/: __init__.py  cli.py  hist.py  parser.py  types.py
tests/: test_cli.py  test_parser.py
