[project]
name = "pydice"
version = "0.1.0"
description = "CLI dice roller"
authors = [
    {name = "OpenAI"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "coverage (>=7.8.2,<8.0.0)",
    "hypothesis (>=6.0.0,<7.0.0)"
]

[project.scripts]
pydice = "pydice.cli:main"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
